Update Capital Framework versions from 1.0.0 to 3.4.1 (along the way: remove Bower as a build process, update all NPM packages to latest non-breaking versions, revise the standalone setup build process to create a truly clean build when run, include a workaround for CFv3 when it comes to shrinkwrapping NPM packages, and fixed an incorrect variable in `disclosures.less`)

--- a/src/disclosures/css/disclosures.less
+++ b/src/disclosures/css/disclosures.less
@@ -136,7 +136,7 @@
     .heading-4();
     margin-bottom: unit(30px / @font-size, em);
 
-    .respond-to-min(@desktop-min, {
+    .respond-to-min(@bp-lg-min, {
       .heading-3();
     });
 
